--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "just4developments@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.4.7",
+    "amqplib": "^0.5.0",
     "restify": "^4.2.0"
+  },
+  "devDependencies": {
+    "mongodb": "^2.2.11"
   }
 }
