--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "just4developments@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.1.4",
+    "jimp": "^0.2.27",
+    "node-uuid": "^1.4.7",
     "restify": "^4.2.0"
   }
 }
