--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "gen": "node ./lib/generate/gen.js"
+    "gen": "node ./lib/generate/gen.js",
+    "start": "node --expose-gc index.js"
   },
   "author": "just4developments@gmail.com",
   "license": "ISC",
