--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
         "name": "Launch",
         "type": "node2",
         "request": "launch",
-        // "program": "${workspaceRoot}/lib/generate/gen.js",
+        // "program": "${workspaceRoot}/lib/generate/gen2.js",
         "program": "${workspaceRoot}/index.js",
         "stopOnEntry": false,
         "args": ["--expose-gc"],
