--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "jimp": "^0.2.27",
     "node-uuid": "^1.4.7",
     "restify": "^4.2.0"
+  },
+  "devDependencies": {
+    "js-beautify": "^1.6.4"
   }
 }
