--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "async": "^2.1.4",
     "jimp": "^0.2.27",
+    "lodash": "^4.17.2",
     "node-uuid": "^1.4.7",
     "restify": "^4.2.0"
   },
