U: Integrate async/await into project

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,12 +7,14 @@
         // "program": "${workspaceRoot}/lib/generate/gen.js",
         "program": "${workspaceRoot}/index.js",
         "stopOnEntry": false,
-        "args": ["--expose-gc"],
+        "args": [],
         "cwd": "${workspaceRoot}",
         "preLaunchTask": null,
         "runtimeExecutable": null,
         "runtimeArgs": [
-            "--nolazy"
+            "--nolazy",
+            "--expose-gc", 
+            "--harmony-async-await"
         ],
         "env": {
             "NODE_ENV": "development"
