--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --expose-gc index.js",
-    "gen": "node ./lib/generate/gen.js"
+    "start": "node --expose-gc --harmony-async-await index.js",
+    "gen": "node ./lib/generate/gen.js",
+    "pm2": "pm2 start --node-args=\"--expose-gc --harmony-async-await\""
   },
   "repository": {
     "type": "git",
