--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
         "type": "node2",
         "request": "launch",
         // "program": "${workspaceRoot}/lib/generate/gen.js",
-        "program": "${workspaceRoot}/index.js",
+        "program": "${workspaceRoot}/test.js",
         "stopOnEntry": false,
         "args": [],
         "cwd": "${workspaceRoot}",
