--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,8 @@
         "name": "Launch",
         "type": "node2",
         "request": "launch",
-        // "program": "${workspaceRoot}/lib/generate/gen.js",
-        "program": "${workspaceRoot}/index.js",
+        "program": "${workspaceRoot}/lib/generate/gen.js",
+        // "program": "${workspaceRoot}/index.js",
         "stopOnEntry": false,
         "args": [],
         "cwd": "${workspaceRoot}",
