--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "async": "^2.1.4",
     "jimp": "^0.2.27",
     "lodash": "^4.17.2",
+    "mongodb": "^2.2.22",
     "node-uuid": "^1.4.7",
+    "redis": "^2.6.5",
     "restify": "^4.2.0"
   },
   "devDependencies": {
