--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "just4developments@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "fs-path": "0.0.23",
     "lodash": "^4.17.2",
+    "mongodb": "^2.2.22",
     "node-uuid": "^1.4.7",
     "restify": "^4.3.0"
   },
