--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lodash": "^4.17.2",
     "mongodb": "^2.2.22",
     "node-uuid": "^1.4.7",
-    "restify": "^4.3.0"
+    "restify": "^4.3.0",
+    "unirest": "^0.5.1"
   },
   "devDependencies": {
     "js-beautify": "^1.6.4"
