--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "mongodb": "^2.2.22",
     "node-uuid": "^1.4.7",
     "restify": "^4.3.0",
-    "unirest": "^0.5.1"
+    "unirest": "^0.5.1",
+    "nodemailer": "^3.0.2",
+    "fs-path": "0.0.23",
+    "jimp": "^0.2.27"
   },
   "devDependencies": {
     "js-beautify": "^1.6.4"
