--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "node --expose-gc --harmony-async-await index.js",
     "test": "node --expose-gc --harmony-async-await test.js",
     "gen": "node ./lib/generate/gen.js",
-    "pm2": "pm2 start --node-args=\"--expose-gc --harmony-async-await\" --name restify-core"
+    "pm2": "pm2 start --node-args=\"--expose-gc --harmony-async-await\" --name restify-core",
+    "dev": "cd ./web && npm run dev",
+    "route": "node ./web/webpack.import",
+    "create": "node ./web/tools-create"
   },
   "repository": {
     "type": "git",
