--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,8 @@
     "@angular/router": "^0.2.0",
     "angular": "^1.5.8",
     "compression": "^1.6.2",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
