--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "restify-core",
+  "name": "restify-core-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "It bases on restify nodejs framework. It help us easy to make core project and generate APIs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --expose-gc --harmony-async-await index.js",
+    "test": "node --expose-gc --harmony-async-await test.js",
     "gen": "node ./lib/generate/gen.js",
-    "start": "node --expose-gc index.js"
+    "pm2": "pm2 start index.js --node-args=\"--expose-gc --harmony-async-await\" --name restify-core-api"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/just4developments/restify-core.git"
   },
   "author": "just4developments@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "async": "^2.1.4",
     "jimp": "^0.2.27",
     "mongo": "^0.1.0",
+    "lodash": "^4.17.2",
+    "mongodb": "^2.2.22",
     "node-uuid": "^1.4.7",
-    "restify": "^4.2.0"
+    "restify": "^4.3.0"
+  },
+  "devDependencies": {
+    "js-beautify": "^1.6.4"
   }
 }
